--- a/thesis.bib
+++ b/thesis.bib
@@ -216,3 +216,80 @@ author = "R. Fr{\"u}hwirth"
       year         = "2010",
       journal	   = "CMS Internal Note IN-10-008",
 }
+@techreport{CMS-PAS-PFT-09-001,
+      title         = "{Particle-Flow Event Reconstruction in CMS and Performance
+                       for Jets, Taus, and MET}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2009. Geneva",
+      number        = "CMS-PAS-PFT-09-001",
+      month         = "Apr",
+      year          = "2009",
+}
+
+@article{Cacciari:2008gp,
+      author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+      title          = "{The Anti-k(t) jet clustering algorithm}",
+      journal        = "JHEP",
+      volume         = "0804",
+      pages          = "063",
+      doi            = "10.1088/1126-6708/2008/04/063",
+      year           = "2008",
+      eprint         = "0802.1189",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPTHE-07-03",
+      SLACcitation   = "%%CITATION = ARXIV:0802.1189;%%",
+}
+@article{Cacciari:2011ma,
+      author         = "Cacciari, Matteo and Salam, Gavin P. and Soyez, Gregory",
+      title          = "{FastJet User Manual}",
+      journal        = "Eur.Phys.J.",
+      volume         = "C72",
+      pages          = "1896",
+      doi            = "10.1140/epjc/s10052-012-1896-2",
+      year           = "2012",
+      eprint         = "1111.6097",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2011-297",
+      SLACcitation   = "%%CITATION = ARXIV:1111.6097;%%",
+}
+@article{Cacciari:2005hq,
+      author         = "Cacciari, Matteo and Salam, Gavin P.",
+      title          = "{Dispelling the $N^{3}$ myth for the $k_t$ jet-finder}",
+      journal        = "Phys.Lett.",
+      volume         = "B641",
+      pages          = "57-61",
+      doi            = "10.1016/j.physletb.2006.08.037",
+      year           = "2006",
+      eprint         = "hep-ph/0512210",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPTHE-05-32",
+      SLACcitation   = "%%CITATION = HEP-PH/0512210;%%",
+}
+
+@techreport{CMS-PAS-JME-09-008,
+      title         = "{Calorimeter Jet Quality Criteria for the First CMS
+                       Collision Data}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2010. Geneva",
+      number        = "CMS-PAS-JME-09-008",
+      month         = "Apr",
+      year          = "2010",
+}
+
+@article{1748-0221-6-11-P11002,
+  author={The CMS collaboration},
+  title={Determination of jet energy calibration and transverse momentum resolution in CMS},
+  journal={Journal of Instrumentation},
+  volume={6},
+  number={11},
+  pages={P11002},
+  url={http://stacks.iop.org/1748-0221/6/i=11/a=P11002},
+  year={2011},
+  abstract={Measurements of the jet energy calibration and transverse momentum resolution in CMS are presented, performed with a data sample collected in proton-proton collisions at a centre-of-mass energy of 7TeV, corresponding to an integrated luminosity of 36pb −1 . The transverse momentum balance in dijet and γ/Z+jets events is used to measure the jet energy response in the CMS detector, as well as the transverse momentum resolution. The results are presented for three different methods to reconstruct jets: a calorimeter-based approach, the ``Jet-Plus-Track'' approach, which improves the measurement of calorimeter jets by exploiting the associated tracks, and the ``Particle Flow'' approach, which attempts to reconstruct individually each particle in the event, prior to the jet clustering, based on information from all relevant subdetectors.}
+}
+	
