finished first pass at RECO

--- a/ana.tex
+++ b/ana.tex
@@ -48,7 +48,7 @@ Required to be a & $\textit{tracker muon}$ \\
 \subsection{Electron reconstruction and selection}
 The signature of an electron in the CMS detector is a track reconstructed by the tracking detectors that leads to a matching cluster of energy reconstructed in the ECAL. In practice this is complicated by the large material budget of the tracking detectors, resulting in a high probability of an electron to loose energy in form of bremsstrahlung. About 35\% of all electrons loose more than 70\% of their energy and for 10\% the energy loss exceeds 95\%~\cite{Baffioni:2006cd}. The reconstruction is further complicated by the large solenoidal magnetic field, which bends the electron's trajectory away from the radiated photons, leading to a spread of the energy in $\phi$ direction. This has to be taken into account both in the tracking algorithms and the clustering of the energy deposits in the ECAL. 
 
-In the ECAL two different algorithms are used to group the energy deposits into clusters and clusters of clusters, called super clusters (SCs), in the barrel and endcap regions of the detector. Both are designed to group together the energy deposits of the electron itself and those of the bremsstrahlung photons. In the of $1.6 < |\eta| < 2.6$ the preshower is located in front of the ECAL and electrons will deposit a fraction of their energy there. The energy deposited in the strips of the preshower between an SC in the ECAL and the primary vertex is summed and added to the energy of this SC~\cite{Anderson:1365024}. ADD SC position calculation! 
+In the ECAL two different algorithms are used to group the energy deposits into clusters and clusters of clusters, called super clusters (SCs), in the barrel and endcap regions of the detector. Both are designed to group together the energy deposits of the electron itself and those of the bremsstrahlung photons. In the of $1.6 < |\eta| < 2.6$ the preshower is located in front of the ECAL and electrons will deposit a fraction of their energy there. The energy deposited in the strips of the preshower between an SC in the ECAL and the primary vertex is summed and added to the energy of this SC~\cite{Anderson:1365024}. ADD SC position calculation and electron charge! CHANGE ALL REFS TO EGM-13-001 once submitted to journal!
 
 In the track reconstruction with Kalman filters as discussed above energy losses due to interactions of the particles with the tracker material are considered to be Gaussian. For electrons, however, this is not sufficient because the dominant energy loss due to bremsstrahlung is a non-gaussian contribution. Electron candidate tracks are therefore fitted with a Gaussian Sum Filtern (GSF) algorithm~\cite{FruhwirtGSFCMS}, which models the non-Gaussian components as a sum of Gaussian distributions. GSF tracking is initiated in two ways. $\textit{ECAL driven seeding}$ requires the presence of a track seed that matches the position of an SC when extrapolating backwards from the ECAL to track~\cite{Baffioni:2006cd}. Alternatively, $\textit{tracker driven seeding}$ is started by tracks that either match the position of ECAL clusters when extrapolated to the ECAL surface, covering the case of no bremsstrahlung, or are of poor quality with only few associated hits~\cite{Chatrchyan:2014fea}. The GSF track and the energy measurement in the ECAL are combined into the final electron candidate. 
 
@@ -108,7 +108,7 @@ d_{ij} = min(k_{Ti}^{-2},k_{Tj}^{-2})\frac{\Delta^2_{ij}}{R^2},
 \begin{equation}
 d_{iB} = k_{ti}^{-2},
 \end{equation}
-with $\Delta_{ij}^2 = (y_i-y_j)^2 + (\phi_i - \phi_j)^2$ and $k_{Ti}$, $y_i$, and $\phi_i$ being the transverse momentum, rapidity and azimuth of a particle. For an entity (particle, pseudo-jet) $i$ all distances are calculated. If the smallest is a $d_{ij}$, $i$ and $j$ are combined in a new pseudo-jet. If the smallest distance if the distance to the beam $d_{iB}$, the pseudo-jet is considered a final jet and removed from the list of particles available for clustering. 
+with $\Delta_{ij}^2 = (y_i-y_j)^2 + (\phi_i - \phi_j)^2$ and $k_{Ti}$, $y_i$, and $\phi_i$ being the transverse momentum, rapidity and azimuth of a particle. For an entity (particle, pseudo-jet) $i$ all distances are calculated. If the smallest is a $d_{ij}$, $i$ and $j$ are combined in a new pseudo-jet. If the smallest distance if the distance to the beam $d_{iB}$, the pseudo-jet is considered a final jet and removed from the list of particles available for clustering. The parameter $R$ governs the size of the resulting jet and is set to 0.5 in this analysis. 
 
 The measured jet energy has to be corrected for energy offsets and the non-uniform and non-linear response of the detector. Each component of the jet's four-momentum vector is corrected by a multiplicative factor~\cite{1748-0221-6-11-P11002}
 \begin{equation}
@@ -118,8 +118,52 @@ The correction is applied as a sequence of different factors:
 \begin{equation}
 C = C^{L1}_{\text{offset}}(p_T^{raw})\cdot C^{L2L3}_{MC}(p_T^{\prime},\eta)\cdot C^{L2Residual}_{rel}(\eta) \cdot C^{L3Residual}_{abs}(p_T^{\prime\prime}).
 \end{equation}
-The L1 correction, applied to the raw jet, corrects for offsets due to the underlying event and pileup. The L2L3 corrections, derived from Simulation, corrects for the non-linearities and non-uniformities of the detector response to jets of different $\pt$ and $\eta$ and is applied to the offset-corrected jet. To correct for the differences between Simulation and real data, jets in data events are further corrected for the residual differences between the two.  
+The L1 correction, applied to the raw jet, corrects for offsets due to the underlying event and pileup using a jet area approach. The jet area $A_j$ is determined for each jet and the particles in the event are clustered with a $k_T$ jet clustering algorithm with a distance parameter $R=0.6$, which clusters a large number of soft jets in each event. The median $p_T$ density $\rho$ is then defined as the median of the distribution of $p_{T_j}/A_j$ for all of these jets. Therfore $\rho$ is not influenced by the presence of hard jets from the primary interaction in the event and is a measure for the pileup activity, the underlying event and electronic noise. Jets are then corrected by the factor $C^{L1}_{\text{offset}}(p_T^{raw}) = 1-\frac{(\rho-<\rho_{UE}>)\cdot A_j)}{p_T^{raw}}$, where $<\rho_{UE}>$ is the mean \pt density due to the underlying event, measured in events with no pileup interactions. The L2L3 corrections, derived from Simulation, corrects for the non-linearities and non-uniformities of the detector response to jets of different $\pt$ and $\eta$ and is applied to the offset-corrected jet. To correct for the differences between Simulation and real data, jets in data events are further corrected for the residual differences between the two.  
 
 In this analysis, the \pt of a jet is required to exceed $\unit{40}{\giga\electronvolt}$ and jets are required to lie inside the fiducial volume of the ECAL of $|\eta| < 3.0$. A set of loose quality selections is applied to suppress jets reconstructed because of detector noise, ensuring that the jet is reconstructed in more than one subdetector and has more than one constituent. As the jet clustering is performed using all reconstructed $\textit{particle candidates}$, jets within $\Delta R = 0.4$ to leptons identified with the criteria described above are rejected. 
+
+Because of their long lifetime, b-jets decay at a measurable distance from their production vertex, allowing for the reconstruction of a secondary vertex. In this analysis the $\textit{combined}$ $\textit{secondary}$ $\textit{vertex}$ (CSV) algorithm is used. Likelihood ratios based on a variety of variables characterizing the secondary vertices and the tracks inside the jet are used to construct a single discriminator. If it's value exceeds a given threshold, the jet is tagged as originating from a b-quark~\cite{Chatrchyan:2012jua}. The performance of the b-tagging algorithms have been measured on the $\sqrt{s} = \unit{8}{\tera\electronvolt}$ dataset~\cite{CMS-DP-2013-005}. The average identification efficiency as a function of the discriminator value is shown on the left side of Figure~\ref{fig:bTagging}. For the medium working point of 0.679, chosen in this analysis, the efficiency is about 70\% while the probability to misidentify a jet originating from a light quark as a b-jet is between 1\% and 3\%, depending on the \pt of the jet, as shown on the right side of Figure~\ref{fig:bTagging}. In this analysis b-jets are considered with a \pt larger than $\unit{30}{\giga\electronvolt}$ and $|\eta| < 2.4$. 
+\begin{figure}[htbp]
+\centering
+\begin{minipage}[t]{0.49\textwidth}
+  \includegraphics[width=\textwidth]{plots/RECO/bTagEfficiency.png}
+\end{minipage}
+\begin{minipage}[t]{0.49\textwidth}
+\includegraphics[width=\textwidth]{plots/RECO/bTagMisID.png}
+\end{minipage}
+\caption{Performance of the CSV b-tagging algorithm. Shown is the identification efficiency as a function of the discriminator value (left) and the probability of misidentifying a jet originating from a light quark as a b-jet (right)~\cite{CMS-DP-2013-005}.}
+\label{fig:bTagging}
+\end{figure} 
+
+\subsubsection{Missing transverse energy}
+As the transverse momenta of the initial partons are negligible compared to their large momenta in beam direction, the sum of the transverse momenta of all particles produced in the interaction is essentially zero because of conservation of momentum. For the reconstructed event this is not necessarily the case, leading to a missing transverse energy (\MET) different from zero. The measurements in the detector have a finite resolution and are subject to detector noise and are subject to gaps in the detector acceptance. Also, particles that are only weakly interacting, such as neutrinos, are not detected by CMS and cause an imbalance of the transverse momentum sum. As this imbalance is the only experimental signature of this class of particles, a good \MET resolution is a key factor for the discovery of processes that include the production of new weakly interaction particles. 
+
+Several algorithms have been developed in CMS to reconstruct \MET~\cite{7TeVMETPaper}. Calorimetric (Calo) \METVec is calculated as the negative vector sum of the energy deposits in each calorimeter tower. The small energy deposits from muons are replaced by the \pt measurements of muons. A further correction is introduced in the track-corrected (TC) \METVec. For well reconstructed tracks, the track measurement is more precise than the measurement of a hadron's energy in the HCAL. Therefore, for tracks not associated with an electron or  muon, the track measurement is used in the calculation of \METVec. The energy deposit in the calorimeter is excluded, based on a model of the calorimeter response, treating all hadrons as pions. In contrast to these subdetector-based approaches, the event description of the particle flow algorithm can be used to calculate \METVec. It is defined as the negative vector sum over the \pt vectors of all particle flow candidates:
+\begin{equation}
+ \METVec = - \sum\limits_{\text{PF candidates}} \vec{p}_T^i.
+\end{equation}
+Comparing the resolution for the \MET components in $x$ and $y$ direction, as shown in Figure~\ref{fig:METReso} for the data collected in 2011, PF \MET performs best of the three algorithms and is therefore used in this analysis.
+\begin{figure}
+\begin{center}
+\includegraphics[scale=0.2]{plots/RECO/METResolution.png}
+\caption{Calibrated \MET resolution as a function of the sum of the \Et of all particle flow candidates in an event. Shown are Calo \MET in black, TC \MET in red and PF \MET in blue~\cite{7TeVMETPaper}.}
+\label{fig:METReso}
+\end{center}
+\end{figure}
+
+Several corrections can be applied to the calculation of \MET. The $\textit{type-I}$ corrections propagate the corrections to the jet energy to the \MET calculation for all jets with \pt larger than $\unit{10}{\giga\electronvolt}$ and with less than 90\% of their energy deposited in the ECAL. The effects of pileup on the \MET reconstruction can be mitigated by applying $\textit{type-0}$ corrections, which are calculated on minimum bias events to parametrize the effects of such interactions on \MET. Further corrections can be applied to correct for modulations of the \MET in $\phi$~\cite{CMS-PAS-JME-12-002}. As this analysis searches for events with a large genuine \MET and is therefore not very sensitive to \MET introduced by resolution effect, none of these corrections are applied. However, $\textit{type-I}$ corrected PF \MET is considered as a cross check. 
+\subsubsection{Lepton isolation}
+While the lepton selection criteria described above are sufficient to reject backgrounds from particles misidentified as leptons, the do not suppress real leptons not originating from the primary interaction. As these are often produced in decay of heavy flavour quarks inside a jet, are more suitable criterion is to consider the amount of activity in the detector close to the lepton candidate, called lepton isolation. In this analysis, particle based isolation is used. For this the energy deposited by charged hadron, neutral hadron, and photon particle flow candidates in a cone of $\Delta R = 0.3$ around the lepton is summed:
+\begin{equation}
+\text{Iso} = \sum\limits_{\text{charged hadrons}} E_T + \sum\limits_{\text{neutral hadrons}} E_T + \sum\limits_{\text{photons}} E_T.
+\end{equation}
+The calculation of the isolation is distorted by pileup if PF candidates originating from pileup interactions lie within the cone and are counted in the isolation sum. This is easily remedied for charged hadrons, as those originating from a pileup vertex can be excluded from the calculation. For neutral hadrons and photons there is no track that can be associated to a vertex and a direct identification as pileup particles is not possible. Different approaches are pursued to correct for this contribution for electrons and muons. In both cases an estimate for the contribution of neutral pileup is subtracted from the isolation sum, which changes to:
+\begin{equation}
+\text{Iso} = \sum\limits_{\text{charged hadrons}} E_T + max(0, \sum\limits_{\text{neutral hadrons}} E_T + \sum\limits_{\text{photons}} E_T - \sum\limits_{\text{neutral PU}} E_T). 
+\label{eq:iso}
+\end{equation}
+For electrons the correction is similar to the L1 offset correction for jets described above. As a measure for the pileup contribution in the isolation cone the median \pt density in the event $\rho$ is multiplied by the effective area of the electron in the detector, which is calculated in bins of $\eta$. The pileup correction is therefore defined as $\sum\limits_{\text{neutral PU}} E_T = \rho\cdot A^{eff}_{\text{electron}}$. For muons $\Delta \beta$ corrections are applied. Here it is utilized that on average the contribution of neutral particles from pileup is half that of charged particles, leading to a correction defined as $\sum\limits_{\text{neutral PU}} E_T = 0.5\cdot \sum\limits_{\text{charged PU}} E_T$. Because of the stochastic nature of these approaches, overcorrection is possible. Therefore, no negative contribution from neutral particles is allowed in equation~\ref{eq:iso}. ADD PLOTS SHOWING ISO VS NVTX
+
+For both electrons and muons the isolation sum must not exceed $0.15\cdot \pt$ of the lepton candidate. MAKE FANCY PLOTS SHOWING WHY THIS IS A GOOD CHOICE
 \section{Datasets}
 \section{Event selection}
