--- a/thesis.bib
+++ b/thesis.bib
@@ -292,4 +292,43 @@ author = "R. Fr{\"u}hwirth"
   year={2011},
   abstract={Measurements of the jet energy calibration and transverse momentum resolution in CMS are presented, performed with a data sample collected in proton-proton collisions at a centre-of-mass energy of 7TeV, corresponding to an integrated luminosity of 36pb −1 . The transverse momentum balance in dijet and γ/Z+jets events is used to measure the jet energy response in the CMS detector, as well as the transverse momentum resolution. The results are presented for three different methods to reconstruct jets: a calorimeter-based approach, the ``Jet-Plus-Track'' approach, which improves the measurement of calorimeter jets by exploiting the associated tracks, and the ``Particle Flow'' approach, which attempts to reconstruct individually each particle in the event, prior to the jet clustering, based on information from all relevant subdetectors.}
 }
-	
+
+@article{Chatrchyan:2012jua,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Identification of b-quark jets with the CMS experiment}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JINST",
+      volume         = "8",
+      pages          = "P04013",
+      doi            = "10.1088/1748-0221/8/04/P04013",
+      year           = "2013",
+      eprint         = "1211.4462",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-BTV-12-001, CERN-PH-EP-2012-262",
+      SLACcitation   = "%%CITATION = ARXIV:1211.4462;%%",
+}
+@article{CMS-DP-2013-005,
+      title         = "{Results on b-tagging identification in 8 TeV pp
+                       collisions}",
+      month         = "Feb",
+      year          = "2013",
+}
+@techreport{CMS-PAS-JME-12-002,
+      title         = "{MET performance in 8 TeV data}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-JME-12-002",
+      year          = "2013",
+}
+@article{7TeVMETPaper,
+  author={The CMS collaboration},
+  title={Missing transverse energy performance of the CMS detector},
+  journal={Journal of Instrumentation},
+  volume={6},
+  number={09},
+  pages={P09001},
+  url={http://stacks.iop.org/1748-0221/6/i=09/a=P09001},
+  year={2011},
+}
