--- a/thesis.tex
+++ b/thesis.tex
@@ -121,6 +121,7 @@
 \newcommand{\Ht}{\HT}
 \newcommand{\Met}{\MET}
 \newcommand{\MET}{\ensuremath{E_{T}^{miss}}\xspace}
+\newcommand{\METVec}{\ensuremath{\vec{E}_{T}^{miss}}\xspace}
 \newcommand{\ptll} {\ensuremath{\pt_{\ell\ell}}}
 \newcommand{\CTEQ} {{\textsc{cteq}}}
 
