--- a/thesis.bib
+++ b/thesis.bib
@@ -332,3 +332,38 @@ author = "R. Fr{\"u}hwirth"
   url={http://stacks.iop.org/1748-0221/6/i=09/a=P09001},
   year={2011},
 }
+
+@article{DQM,
+  author={L Tuura and A Meyer and I Segoni and G Della Ricca},
+  title={CMS data quality monitoring: Systems and experiences},
+  journal={Journal of Physics: Conference Series},
+  volume={219},
+  number={7},
+  pages={072020},
+  url={http://stacks.iop.org/1742-6596/219/i=7/a=072020},
+  year={2010},
+
+}
+
+@article{DertermisiticAnnealing,
+	title={Deterministic annealing for clustering, compression, classification, regression, and related optimization problems},
+	author={K Rose},
+	journal={Proceedings of the IEEE},
+	volume={8},
+	year={1998},
+	doi=10.1109/5.726788,
+	
+
+
+}
+
+@techreport{Fruehwirth:1027031,
+      author        = "Fr{\"u}hwirth, R and Waltenberger, Wolfgang and Vanlaer,
+                       Pascal",
+      title         = "{Adaptive Vertex Fitting}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "CMS-NOTE-2007-008",
+      month         = "Mar",
+      year          = "2007",
+}
