--- a/thesis.tex
+++ b/thesis.tex
@@ -175,7 +175,7 @@
 \newcommand{\SFSB}{{\color{SFSB} SFSB}}
 \newcommand{\OFSB}{{\color{OFSB} OFSB}}
 
-
+\newcommand{\TODO}[1]{\textcolor{red}{TO DO: #1}}
 
 \newcommand{\PFSE}{\ensuremath{ \mathcal{P}_{FSE}}}
 
